--- a/forgotpass.html
+++ b/forgotpass.html
@@ -161,7 +161,7 @@
         <div class="logo-text">FOSSEE Workshops</div>
     </div>
     <div class="nav">
-        <a href="login.html" class="active">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="statistics.html">Workshop Statistics</a>
     </div>
 </div>
