--- a/statistics.html
+++ b/statistics.html
@@ -383,7 +383,7 @@
             <div class="logo-text">FOSSEE Workshops</div>
         </div>
         <div class="nav">
-            <a href="login.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="#" class="active">Workshop Statistics</a>
         </div>
     </div>
