--- a/forgotpass.html
+++ b/forgotpass.html
@@ -182,7 +182,7 @@
         </div>
     </form>
     <p class="text-center mt-3">
-        Remembered your password? <a href="login.html">Login</a>
+        Remembered your password? <a href="index.html">Login</a>
     </p>
 
     
