--- a/statistics.html
+++ b/statistics.html
@@ -30,13 +30,13 @@
 	    align-items: center;
 	    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 	    border-bottom: 4px solid #FF6B00;
-	    flex-wrap: wrap; /* Allow wrapping on small screens */
+	    flex-wrap: wrap;
 	}
 
 	.logo-container {
 	    display: flex;
 	    align-items: center;
-	    flex-shrink: 0; /* Prevent shrinking on mobile */
+	    flex-shrink: 0; 
 	}
 
 	.logo {
@@ -394,7 +394,7 @@
 <body>
     <div class="header">
         <div class="logo-container">
-            <img src="https://fossee.in/sites/all/themes/software_responsive_theme/img/logo.png" alt="FOSSEE Logo" class="logo">
+            <img src="images/logo.png" alt="FOSSEE Logo" class="logo">
             <div class="logo-text">FOSSEE Workshops</div>
         </div>
         <div class="nav">
@@ -601,7 +601,7 @@
     <div class="footer">
         <div class="copyright">
             Developed by FOSSEE Group, 
-            <img src="https://fossee.in/sites/all/themes/software_responsive_theme/img/iitb-logo.png" 
+            <img src="images/iitb-logo.png" 
             alt="IIT Bombay Logo" class="iitb-logo">
             IIT Bombay
         </div>
