--- a/index.html
+++ b/index.html
@@ -23,65 +23,56 @@
 
         /* Header */
         .header {
-            background: #fff;
-            padding: 15px 40px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            border-bottom: 4px solid #FF6B00;
-        }
+	    background: #fff;
+	    padding: 15px 40px;
+	    display: flex;
+	    justify-content: space-between;
+	    align-items: center;
+	    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+	    border-bottom: 4px solid #FF6B00;
+	    flex-wrap: wrap;
+	}
 
-        .logo-container {
-            display: flex;
-            align-items: center;
-        }
+	.logo-container {
+	    display: flex;
+	    align-items: center;
+	    flex-shrink: 0; 
+	}
 
-        .logo {
-            height: 50px;
-            margin-right: 15px;
-        }
+	.logo {
+	    height: 50px;
+	    max-width: 100%;
+	}
 
-        .logo-text {
-            font-size: 24px;
-            font-weight: 700;
-            color: #FF6B00;
-            font-family: 'Montserrat', sans-serif;
-        }
+	.logo-text {
+	    font-size: 24px;
+	    font-weight: 700;
+	    color: #FF6B00;
+	    margin-left: 12px;
+	}
 
-        .nav {
-            display: flex;
-            gap: 25px;
-        }
+	.nav {
+	    display: flex;
+	    gap: 25px;
+	    flex-wrap: wrap;
+	}
 
-        .nav a {
-            color: #555;
-            text-decoration: none;
-            font-weight: 500;
-            font-size: 16px;
-            position: relative;
-            transition: 0.3s;
-        }
+	.nav a {
+	    color: #555;
+	    text-decoration: none;
+	    font-weight: 500;
+	    font-size: 16px;
+	    transition: color 0.3s;
+	}
 
-        .nav a.active {
-            color: #FF6B00;
-        }
+	.nav a.active {
+	    color: #FF6B00;
+	    border-bottom: 2px solid #FF6B00;
+	}
 
-        .nav a::after {
-            content: '';
-            position: absolute;
-            bottom: -5px;
-            left: 0;
-            width: 0%;
-            height: 2px;
-            background: #FF6B00;
-            transition: 0.3s;
-        }
-
-        .nav a:hover::after,
-        .nav a.active::after {
-            width: 100%;
-        }
+	.nav a:hover {
+	    color: #FF4500;
+	}
 
         /* Main Container */
         .main-container {
@@ -349,15 +340,40 @@
             .stat {flex: 1 0 calc(50% - 20px);}
         }
 
-        @media (max-width: 768px) {
-            .header {
-                flex-direction: column;
-                text-align: center;
-                padding: 15px 20px;
-            }
-            .logo-container {margin-bottom: 15px;}
-            .nav {flex-wrap: wrap; justify-content: center;}
-        }
+        @media (max-width: 992px) {
+	    .header {
+		justify-content: center;
+		text-align: center;
+	    }
+	}
+
+	@media (max-width: 768px) {
+	    .header {
+		flex-direction: column;
+		padding: 15px 20px;
+	    }
+
+	    .logo-container {
+		justify-content: center;
+		margin-bottom: 10px;
+	    }
+
+	    .logo {
+		height: 50px;
+		max-width: 80%;
+	    }
+
+	    .logo-text {
+		font-size: 22px;
+		margin-left: 8px;
+	    }
+
+	    .nav {
+		justify-content: center;
+		gap: 15px;
+		margin-top: 8px;
+	    }
+	}
 
         @media (max-width: 576px) {
             .main-container {padding: 20px;}
@@ -370,7 +386,7 @@
     <!-- Header -->
     <div class="header">
         <div class="logo-container">
-            <img src="https://fossee.in/sites/all/themes/software_responsive_theme/img/logo.png" alt="FOSSEE Logo" class="logo">
+            <img src="images/logo.png" alt="FOSSEE Logo" class="logo">
             <div class="logo-text">FOSSEE Workshops</div>
         </div>
         <div class="nav">
@@ -465,7 +481,7 @@
     <!-- Footer -->
     <div class="footer">
         Developed by FOSSEE Group,
-        <img src="https://fossee.in/sites/all/themes/software_responsive_theme/img/iitb-logo.png" alt="IIT Bombay Logo" class="iitb-logo">
+        <img src="images/iitb-logo.png" alt="IIT Bombay Logo" class="iitb-logo">
         IIT Bombay
     </div>
 
