--- a/registration.html
+++ b/registration.html
@@ -161,7 +161,7 @@ body {
 <!-- Header -->
 <div class="header">
     <div class="logo-container">
-        <img src="https://fossee.in/sites/all/themes/software_responsive_theme/img/logo.png" alt="FOSSEE Logo" class="logo">
+        <img src="images/logo.png" alt="FOSSEE Logo" class="logo">
         <div class="logo-text">FOSSEE Workshops</div>
     </div>
     <div class="nav">
@@ -343,7 +343,7 @@ body {
 <!-- Footer -->
 <div class="footer">
     Developed by FOSSEE Group,
-    <img src="https://fossee.in/sites/all/themes/software_responsive_theme/img/iitb-logo.png" alt="IIT Bombay Logo" class="iitb-logo">
+    <img src="images/iitb-logo.png" alt="IIT Bombay Logo" class="iitb-logo">
     IIT Bombay
 </div>
 
