--- a/statistics.html
+++ b/statistics.html
@@ -354,41 +354,23 @@
             }
         }
         
-        @media (max-width: 992px) {
-	    .header {
-		justify-content: center;
-		text-align: center;
-	    }
-	}
-
-	@media (max-width: 768px) {
+        @media (max-width: 768px) {
 	    .header {
 		flex-direction: column;
+		text-align: center;
 		padding: 15px 20px;
 	    }
-
 	    .logo-container {
-		justify-content: center;
-		margin-bottom: 10px;
+		margin-bottom: 15px;
 	    }
-
-	    .logo {
-		height: 50px;
-		max-width: 80%;
-	    }
-
-	    .logo-text {
-		font-size: 22px;
-		margin-left: 8px;
-	    }
-
 	    .nav {
+		flex-wrap: wrap;
 		justify-content: center;
-		gap: 15px;
-		margin-top: 8px;
+	    }
+	    .action-buttons {
+		flex-direction: column;
 	    }
 	}
-
     </style>
 </head>
 <body>
